full-moon/tests/cfxlua_cases/fail/parser/addition_assignment_operator/source.lua
local index = 1

index +=